# installer-test

./: Cargo.toml  changelog.json  presets.json  universal.json
.github/workflows/: rust-debug-win.yml  rust-test-latest.yml  rust.yml
src/: accounts.rs  backup.rs  changelog.rs  gui.rs  installation.rs  main.rs  microsoft_auth_impl.rs  ms_auth.rs  preset.rs  universal.rs
src/assets/: category-styles.css  dropdown.css  expanded-feature-styles.css  file-tree-styles.css  included-features.css  installation-header-styles.css  integrated-styles.css  modal-styles.css  modern_layout.css  particles.js  preset-styles.css  search-results-styles.css  style.css  visual-enhancements.js
src/launcher/: backup.rs  backup_tab.rs  config.rs  feature_card.rs  feature_category.rs  feature_filter.rs  features_tab.rs  integrated_features.rs  launcher_finder.rs  microsoft_auth.rs  mod.rs  ms_auth.rs  performance_tab.rs  process.rs  settings_tab.rs
